// TutorConnect Database Schema for dbdiagram.io
// Use this at: https://dbdiagram.io/d

Project TutorConnect {
  database_type: 'PostgreSQL'
  Note: 'Simplified tutoring platform database schema with PayPal payments'
}

// ============================================================================
// CORE USER TABLES
// ============================================================================

Table users {
  id uuid [primary key, default: `uuid_generate_v4()`]
  email citext [unique, not null]
  password_hash text [not null]
  role varchar(20) [not null, note: 'student, tutor, admin']
  is_active boolean [default: true]
  email_verified boolean [default: false]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Main user authentication and roles table'
}

Table profiles {
  id uuid [primary key, default: `uuid_generate_v4()`]
  user_id uuid [unique, not null]
  first_name text [not null]
  last_name text [not null]
  phone text
  avatar_url text
  bio text
  location text
  timezone text [default: 'UTC']
  joined_date date [default: `CURRENT_DATE`]
  admin_subjects text[] [note: 'Array of subjects admin oversees (admin users only)']
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  Note: 'User profile information including admin subjects'
}

// ============================================================================
// TUTOR-SPECIFIC TABLES
// ============================================================================

Table tutor_profiles {
  id uuid [primary key, default: `uuid_generate_v4()`]
  user_id uuid [unique, not null]
  hourly_rate decimal(8,2) [not null]
  experience text
  education text
  languages text[] [note: 'Array of languages spoken']
  rating decimal(3,2) [default: 0, note: '0-5 rating']
  total_reviews integer [default: 0]
  total_sessions integer [default: 0]
  response_time text [note: 'e.g., "< 1 hour"']
  verified boolean [default: false]
  teaching_style text
  specializations text[] [note: 'Array of specialization areas']
  is_accepting_students boolean [default: true]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Tutor-specific profile information'
}

Table tutor_subjects {
  id uuid [primary key, default: `uuid_generate_v4()`]
  tutor_profile_id uuid [not null]
  subject text [not null]
  subject_rate decimal(8,2) [note: 'Subject-specific rate override']
  is_active boolean [default: true]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    (tutor_profile_id, subject) [unique]
  }
  
  Note: 'Many-to-many relationship for tutor subjects'
}

// ============================================================================
// SESSION MANAGEMENT
// ============================================================================

Table sessions {
  id uuid [primary key, default: `uuid_generate_v4()`]
  student_id uuid [not null]
  tutor_id uuid [not null]
  subject text [not null]
  status varchar(20) [not null, note: 'pending, scheduled, completed, cancelled']
  scheduled_start timestamptz [not null]
  duration_minutes integer [not null]
  price decimal(8,2) [not null]
  meeting_link text
  notes text
  cancellation_reason text
  cancelled_by uuid
  cancelled_at timestamptz
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Tutoring sessions booking and management'
}

Table session_feedback {
  id uuid [primary key, default: `uuid_generate_v4()`]
  session_id uuid [unique, not null]
  student_rating integer [note: '1-5 rating']
  tutor_rating integer [note: '1-5 rating']
  student_comment text
  tutor_comment text
  student_feedback_at timestamptz
  tutor_feedback_at timestamptz
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Session feedback and ratings from both parties'
}

Table payments {
  id uuid [primary key, default: `uuid_generate_v4()`]
  session_id uuid [not null]
  student_id uuid [not null]
  tutor_id uuid [not null]
  amount decimal(8,2) [not null]
  currency varchar(3) [default: 'USD']
  status varchar(20) [not null, note: 'pending, completed, failed, refunded']
  payment_method varchar(20) [default: 'paypal']
  paypal_order_id text [note: 'PayPal order ID from frontend']
  paid_at timestamptz
  refunded_at timestamptz
  refund_amount decimal(8,2)
  refund_reason text
  platform_fee decimal(8,2) [default: 0]
  tutor_payout decimal(8,2) [note: 'Amount paid to tutor after fees']
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  Note: 'PayPal frontend-only payment tracking'
}

// ============================================================================
// TASK MANAGEMENT
// ============================================================================

Table tasks {
  id uuid [primary key, default: `uuid_generate_v4()`]
  user_id uuid [not null]
  title text [not null]
  description text
  category text
  priority varchar(20) [default: 'medium', note: 'low, medium, high']
  status varchar(20) [default: 'pending', note: 'pending, in-progress, completed']
  progress integer [default: 0, note: '0-100 percentage']
  due_date date
  tags text[] [note: 'Array of task tags']
  estimated_hours decimal(4,2)
  actual_hours decimal(4,2)
  completed_at timestamptz
  related_session_id uuid
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Student task management and tracking'
}

// ============================================================================
// CALENDAR SYSTEM
// ============================================================================

Table calendar_events {
  id uuid [primary key, default: `uuid_generate_v4()`]
  user_id uuid [not null]
  title text [not null]
  description text
  type varchar(20) [not null, note: 'session, exam, deadline, personal']
  start_at timestamptz [not null]
  end_at timestamptz [not null]
  location text
  color text [default: '#3B82F6']
  all_day boolean [default: false]
  reminders jsonb [note: 'Array of reminder objects']
  recurring boolean [default: false]
  recurring_pattern text [note: 'daily, weekly, monthly, yearly']
  recurring_end_date date
  related_task_id uuid
  related_session_id uuid
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Calendar events and scheduling'
}

// ============================================================================
// MESSAGING SYSTEM (1-to-1 only)
// ============================================================================

Table conversations {
  id uuid [primary key, default: `uuid_generate_v4()`]
  type varchar(20) [default: 'direct', note: 'direct, session (1-to-1 only)']
  title text
  last_message_at timestamptz
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  Note: '1-to-1 conversations only'
}

Table conversation_members {
  conversation_id uuid [not null]
  user_id uuid [not null]
  joined_at timestamptz [default: `CURRENT_TIMESTAMP`]
  last_read_at timestamptz
  is_active boolean [default: true]
  
  indexes {
    (conversation_id, user_id) [pk]
  }
  
  Note: 'Conversation participants (always 2 users)'
}

Table messages {
  id uuid [primary key, default: `uuid_generate_v4()`]
  conversation_id uuid [not null]
  sender_id uuid [not null]
  content text [not null]
  type varchar(20) [default: 'text', note: 'text, system']
  edited boolean [default: false]
  edited_at timestamptz
  reply_to_id uuid
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Messages within conversations'
}

// ============================================================================
// AI INTERACTION LOGS (Optional)
// ============================================================================

Table ai_logs {
  id uuid [primary key, default: `uuid_generate_v4()`]
  user_id uuid
  query text [not null]
  response text [not null]
  helpful boolean
  category text
  session_id text [note: 'For tracking conversation sessions']
  response_time_ms integer
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  Note: 'AI chatbot interaction logging'
}

// ============================================================================
// RELATIONSHIPS SUMMARY
// ============================================================================

// One user can have one profile
Ref: profiles.user_id > users.id

// One tutor user can have one tutor profile
Ref: tutor_profiles.user_id > users.id

// One tutor profile can have many subjects
Ref: tutor_subjects.tutor_profile_id > tutor_profiles.id

// Sessions connect students and tutors
Ref: sessions.student_id > users.id
Ref: sessions.tutor_id > users.id
Ref: sessions.cancelled_by > users.id

// Each session can have one feedback
Ref: session_feedback.session_id > sessions.id

// Each session can have one payment
Ref: payments.session_id > sessions.id
Ref: payments.student_id > users.id
Ref: payments.tutor_id > users.id

// Tasks belong to users and can relate to sessions
Ref: tasks.user_id > users.id
Ref: tasks.related_session_id > sessions.id

// Calendar events belong to users and can relate to tasks/sessions
Ref: calendar_events.user_id > users.id
Ref: calendar_events.related_task_id > tasks.id
Ref: calendar_events.related_session_id > sessions.id

// Conversation system (1-to-1 only)
Ref: conversation_members.conversation_id > conversations.id
Ref: conversation_members.user_id > users.id
Ref: messages.conversation_id > conversations.id
Ref: messages.sender_id > users.id
Ref: messages.reply_to_id > messages.id

// AI logs relate to users
Ref: ai_logs.user_id > users.id